# workxplorer_backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
postman/: README.md  endpoints.json  environment.json
postman/environments/: PROD.environment.yaml
workxplorer_backend/: example.env  manage.py  schema.yaml
workxplorer_backend/api/accounts/: admin.py  apps.py  emails.py  models.py  permissions.py  serializers.py  urls.py  views.py
workxplorer_backend/api/agreements/: models.py  permissions.py  serializers.py  urls.py  views.py
workxplorer_backend/api/analytics/: apps.py  serializers.py  urls.py  views.py
workxplorer_backend/api/chat/: admin.py  apps.py  consumers.py  models.py  permissions.py  routing.py  serializers.py  services.py  urls.py  views.py
workxplorer_backend/api/geo/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
workxplorer_backend/api/loads/: admin.py  apps.py  choices.py  consumers.py  models.py  pagination.py  routing.py  serializers.py  urls.py  views.py
workxplorer_backend/api/notifications/: admin.py  apps.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  services.py  urls.py  utils.py  views.py
workxplorer_backend/common/: cache.py  db_optimization.py  enums.py  filters.py  geo.py  middleware.py  online.py  performance_middleware.py  permissions.py  storage.py  utils.py  ws_utils.py
workxplorer_backend/core/: asgi.py  health.py  urls.py  wsgi.py
workxplorer_backend/static/: staticfiles.json
(+265 files in other folders)
